--- a/test/test.css
+++ b/test/test.css
@@ -12,6 +12,7 @@
 @import url("../dist/themes/ef-deuteranopia-light.css");
 @import url("../dist/themes/ef-cyprus.css");
 @import url("../dist/themes/ef-elea-dark.css");
+@import url("../dist/themes/ef-elea-light.css");
 @import url("../dist/themes/ef-autumn.css");
 @import url("../dist/themes/ef-maris-light.css");
 @import url("../dist/themes/ef-maris-dark.css");
