--- a/src/css/themes/_ef-cyprus.scss
+++ b/src/css/themes/_ef-cyprus.scss
@@ -9,46 +9,46 @@ $cursor_fg: #fcf7ef;
 
 .Ymacs-Theme-ef-cyprus { --ymacs-cursor-bg: #007f00; --ymacs-cursor-fg: #fcf7ef; --ymacs-modeline-in-bg: #e5e3d8; --ymacs-modeline-ac-bg: #c0df6f; }
 .Ymacs-Theme-ef-cyprus { color: #242521; background-color: #fcf7ef; }
-.Ymacs-Theme-ef-cyprus .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-ef-cyprus .Ymacs_SplitCont > .bar { background-color: #c4c0b6; }
 .Ymacs-Theme-ef-cyprus .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #f8f3ea; border-bottom: 1px solid #f8f3ea; }
 .Ymacs-Theme-ef-cyprus .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #f8f3ea; border-right: 1px solid #f8f3ea; }
 .Ymacs-Theme-ef-cyprus.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #f0e0d463 }
 .Ymacs-Theme-ef-cyprus .Ymacs-frame-content div.line:before { color: #59786f; }
-.Ymacs-Theme-ef-cyprus.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #000000; font-weight: bold; }
+.Ymacs-Theme-ef-cyprus.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #006f00; font-weight: bold; }
 .Ymacs-Theme-ef-cyprus .Ymacs-frame-content:before { color: #59786f; background-color: #fcf7ef; }
 .Ymacs-Theme-ef-cyprus {
 .Ymacs_Popup {
-  --ymacs-popup-bg: #f8f3ea;
+  --ymacs-popup-bg: #f0ece0;
   --ymacs-popup-fg: #242521;
   --ymacs-popup-scrollbar-thumb: var(--ymacs-popup-fg);
 }
 .Ymacs_Popup .Ymacs_Menu {
-.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #e6e4bf; }
+.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #e6e4bf; font-weight: bold; }
 }
 .Ymacs_Overlay.selection div { background-color: #e0e7e5; }
-.Ymacs_Overlay.isearch div { color: #000000; background-color: #efbf00; }
-.Ymacs_Overlay.isearch-lazy div { color: #000000; background-color: #cfceff; }
-.Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs_Modeline { color: #59786f; background-color: #e5e3d8; }
-.Ymacs_Frame-active .Ymacs_Modeline { color: #142010; background-color: #c0df6f; }
+.Ymacs_Overlay.isearch div { color: #242521; background-color: #efbf00; }
+.Ymacs_Overlay.isearch-lazy div { color: #242521; background-color: #cfceff; }
+.Ymacs_Overlay.match-paren div { color: #242521; background-color: #96df80; }
+.Ymacs_Modeline { color: #59786f; background-color: #e5e3d8; border-top: 1px solid #c4c0b6; border-bottom: 1px solid #c4c0b6; }
+.Ymacs_Frame-active .Ymacs_Modeline { color: #142010; background-color: #c0df6f; border-top: 1px solid #c4c0b6; border-bottom: 1px solid #c4c0b6; }
 .minibuffer-prompt { color: #006f00; }
 .mode-line-buffer-id { font-weight: bold; }
 .heading1 { color: #557400; font-weight: bold; }
 .heading2 { color: #bf4400; font-weight: bold; }
 .heading3 { color: #3f6faf; font-weight: bold; }
 .heading4 { color: #00824f; font-weight: bold; }
-.markdown-blockquote { color: #4f677f; font-style: italic; }
-.markdown-blockquote1 { color: #4f677f; font-style: italic; }
-.markdown-blockquote2 { color: #4f677f; font-style: italic; }
-.markdown-blockquote3 { color: #4f677f; font-style: italic; }
-.markdown-pre { color: #006f00; }
-.markdown-code { color: #ca3400; }
-.markdown-code-starter { color: #ca3400; }
-.markdown-code-stopper { color: #ca3400; }
+.markdown-blockquote { color: #4f677f; }
+.markdown-blockquote1 { color: #4f677f; }
+.markdown-blockquote2 { color: #4f677f; }
+.markdown-blockquote3 { color: #4f677f; }
+.markdown-pre { color: #bf456a; }
+.markdown-code { color: #007a9f; }
+.markdown-code-starter { color: #007a9f; }
+.markdown-code-stopper { color: #007a9f; }
 .markdown-ref { color: #a7601f; }
 .directive { color: #9f0d0f; }
 .type { color: #444fcf; }
-.builtin { color: #557400; font-weight: bold; }
+.builtin { color: #557400; }
 .function-name { color: #a7601f; }
 .variable-name { color: #007a9f; }
 .constant { color: #00824f; }
@@ -59,30 +59,30 @@ $cursor_fg: #fcf7ef;
 .regexp-starter { color: #ca3400; }
 .regexp-stopper { color: #ca3400; }
 .regexp-modifier { color: #ca3400; }
-.keyword { color: #006f00; font-weight: bold; }
-.comment { color: #8f6f4a; font-style: italic; }
-.mcomment { color: #8f6f4a; font-style: italic; }
-.comment-starter { color: #8f6f4a; font-style: italic; }
-.mcomment-starter { color: #8f6f4a; font-style: italic; }
-.mcomment-stopper { color: #8f6f4a; font-style: italic; }
-.number { color: #00824f; }
-.operator { }
+.keyword { color: #006f00; }
+.comment { color: #8f6f4a; }
+.mcomment { color: #8f6f4a; }
+.comment-starter { color: #8f6f4a; }
+.mcomment-starter { color: #8f6f4a; }
+.mcomment-stopper { color: #8f6f4a; }
+.number { color: #242521; }
+.operator { color: #242521; }
 .error { color: #a7601f; }
-.isearch-fail { color: #dd0020; background-color: #ffd4bf; font-weight: bold; }
+.isearch-fail { color: #dd0020; background-color: #ffd4bf; }
 .xml-open-tag { color: #a7601f; }
 .xml-close-tag { color: #a7601f; }
 .xml-attribute { color: #007a9f; }
-.xml-entity-starter { color: #00824f; }
-.xml-entity-stopper { color: #00824f; }
-.xml-entity { color: #00824f; }
-.xml-open-bracket { color: #242521; }
-.xml-close-bracket { color: #242521; }
-.xml-closetag-slash { color: #242521; }
-.xml-cdata { color: #242521; font-style: italic; }
-.xml-cdata-starter { color: #242521; font-style: italic; }
-.xml-cdata-stopper { color: #242521; font-style: italic; }
-.block-starter, .block-stopper { color: #9f0d0f; }
-.exp-starter, .exp-stopper { color: #9f0d0f; }
-.lisp-keyword { color: #557400; font-weight: bold; }
+.xml-entity-starter { color: #59786f; }
+.xml-entity-stopper { color: #59786f; }
+.xml-entity { color: #59786f; }
+.xml-open-bracket { color: #59786f; }
+.xml-close-bracket { color: #59786f; }
+.xml-closetag-slash { color: #59786f; }
+.xml-cdata { color: #242521; }
+.xml-cdata-starter { color: #dd0020; }
+.xml-cdata-stopper { color: #dd0020; }
+.block-starter, .block-stopper { color: #242521; }
+.exp-starter, .exp-stopper { color: #242521; }
+.lisp-keyword { color: #557400; }
 .hyperlink { color: #a7601f; }
 }
