--- a/src/css/themes/_ef-duo-dark.scss
+++ b/src/css/themes/_ef-duo-dark.scss
@@ -9,46 +9,46 @@ $cursor_fg: #070019;
 
 .Ymacs-Theme-ef-duo-dark { --ymacs-cursor-bg: #ef6f11; --ymacs-cursor-fg: #070019; --ymacs-modeline-in-bg: #2a2739; --ymacs-modeline-ac-bg: #352487; }
 .Ymacs-Theme-ef-duo-dark { color: #d0d0d0; background-color: #070019; }
-.Ymacs-Theme-ef-duo-dark .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-ef-duo-dark .Ymacs_SplitCont > .bar { background-color: #545f6f; }
 .Ymacs-Theme-ef-duo-dark .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #13101f; border-bottom: 1px solid #13101f; }
 .Ymacs-Theme-ef-duo-dark .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #13101f; border-right: 1px solid #13101f; }
 .Ymacs-Theme-ef-duo-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #301a4f63 }
 .Ymacs-Theme-ef-duo-dark .Ymacs-frame-content div.line:before { color: #857f8f; }
-.Ymacs-Theme-ef-duo-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #ffffff; font-weight: bold; }
+.Ymacs-Theme-ef-duo-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #6f80ff; font-weight: bold; }
 .Ymacs-Theme-ef-duo-dark .Ymacs-frame-content:before { color: #857f8f; background-color: #070019; }
 .Ymacs-Theme-ef-duo-dark {
 .Ymacs_Popup {
-  --ymacs-popup-bg: #13101f;
+  --ymacs-popup-bg: #1d1a26;
   --ymacs-popup-fg: #d0d0d0;
   --ymacs-popup-scrollbar-thumb: var(--ymacs-popup-fg);
 }
 .Ymacs_Popup .Ymacs_Menu {
-.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #2f1a5f; }
+.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #2f1a5f; font-weight: bold; }
 }
 .Ymacs_Overlay.selection div { background-color: #042a50; }
-.Ymacs_Overlay.isearch div { color: #ffffff; background-color: #8f5040; }
-.Ymacs_Overlay.isearch-lazy div { color: #ffffff; background-color: #4648d0; }
-.Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs_Modeline { color: #857f8f; background-color: #2a2739; }
-.Ymacs_Frame-active .Ymacs_Modeline { color: #dedeff; background-color: #352487; }
+.Ymacs_Overlay.isearch div { color: #d0d0d0; background-color: #8f5040; }
+.Ymacs_Overlay.isearch-lazy div { color: #d0d0d0; background-color: #4648d0; }
+.Ymacs_Overlay.match-paren div { color: #d0d0d0; background-color: #407720; }
+.Ymacs_Modeline { color: #857f8f; background-color: #2a2739; border-top: 1px solid #545f6f; border-bottom: 1px solid #545f6f; }
+.Ymacs_Frame-active .Ymacs_Modeline { color: #dedeff; background-color: #352487; border-top: 1px solid #545f6f; border-bottom: 1px solid #545f6f; }
 .minibuffer-prompt { color: #c48702; }
 .mode-line-buffer-id { font-weight: bold; }
 .heading1 { color: #d0730f; font-weight: bold; }
 .heading2 { color: #6f80ff; font-weight: bold; }
 .heading3 { color: #df805f; font-weight: bold; }
 .heading4 { color: #0dafdf; font-weight: bold; }
-.markdown-blockquote { color: #8a9fdf; font-style: italic; }
-.markdown-blockquote1 { color: #8a9fdf; font-style: italic; }
-.markdown-blockquote2 { color: #8a9fdf; font-style: italic; }
-.markdown-blockquote3 { color: #8a9fdf; font-style: italic; }
-.markdown-pre { color: #6f80ff; }
-.markdown-code { color: #d0730f; }
-.markdown-code-starter { color: #d0730f; }
-.markdown-code-stopper { color: #d0730f; }
+.markdown-blockquote { color: #8a9fdf; }
+.markdown-blockquote1 { color: #8a9fdf; }
+.markdown-blockquote2 { color: #8a9fdf; }
+.markdown-blockquote3 { color: #8a9fdf; }
+.markdown-pre { color: #e580ea; }
+.markdown-code { color: #0dafdf; }
+.markdown-code-starter { color: #0dafdf; }
+.markdown-code-stopper { color: #0dafdf; }
 .markdown-ref { color: #7fafff; }
 .directive { color: #7fafff; }
 .type { color: #029fff; }
-.builtin { color: #5faaef; font-weight: bold; }
+.builtin { color: #5faaef; }
 .function-name { color: #0dafdf; }
 .variable-name { color: #af85ff; }
 .constant { color: #379cf6; }
@@ -59,30 +59,30 @@ $cursor_fg: #070019;
 .regexp-starter { color: #df805f; }
 .regexp-stopper { color: #df805f; }
 .regexp-modifier { color: #df805f; }
-.keyword { color: #6f80ff; font-weight: bold; }
-.comment { color: #d08f72; font-style: italic; }
-.mcomment { color: #d08f72; font-style: italic; }
-.comment-starter { color: #d08f72; font-style: italic; }
-.mcomment-starter { color: #d08f72; font-style: italic; }
-.mcomment-stopper { color: #d08f72; font-style: italic; }
-.number { color: #379cf6; }
-.operator { }
+.keyword { color: #6f80ff; }
+.comment { color: #d08f72; }
+.mcomment { color: #d08f72; }
+.comment-starter { color: #d08f72; }
+.mcomment-starter { color: #d08f72; }
+.mcomment-stopper { color: #d08f72; }
+.number { color: #d0d0d0; }
+.operator { color: #d0d0d0; }
 .error { color: #c48702; }
-.isearch-fail { color: #ef656a; background-color: #461210; font-weight: bold; }
+.isearch-fail { color: #ef656a; background-color: #461210; }
 .xml-open-tag { color: #0dafdf; }
 .xml-close-tag { color: #0dafdf; }
 .xml-attribute { color: #af85ff; }
-.xml-entity-starter { color: #379cf6; }
-.xml-entity-stopper { color: #379cf6; }
-.xml-entity { color: #379cf6; }
-.xml-open-bracket { color: #d0d0d0; }
-.xml-close-bracket { color: #d0d0d0; }
-.xml-closetag-slash { color: #d0d0d0; }
-.xml-cdata { color: #d0d0d0; font-style: italic; }
-.xml-cdata-starter { color: #d0d0d0; font-style: italic; }
-.xml-cdata-stopper { color: #d0d0d0; font-style: italic; }
-.block-starter, .block-stopper { color: #7fafff; }
-.exp-starter, .exp-stopper { color: #7fafff; }
-.lisp-keyword { color: #5faaef; font-weight: bold; }
+.xml-entity-starter { color: #857f8f; }
+.xml-entity-stopper { color: #857f8f; }
+.xml-entity { color: #857f8f; }
+.xml-open-bracket { color: #857f8f; }
+.xml-close-bracket { color: #857f8f; }
+.xml-closetag-slash { color: #857f8f; }
+.xml-cdata { color: #d0d0d0; }
+.xml-cdata-starter { color: #ef656a; }
+.xml-cdata-stopper { color: #ef656a; }
+.block-starter, .block-stopper { color: #d0d0d0; }
+.exp-starter, .exp-stopper { color: #d0d0d0; }
+.lisp-keyword { color: #5faaef; }
 .hyperlink { color: #7fafff; }
 }
