--- a/src/css/themes/_ef-duo-light.scss
+++ b/src/css/themes/_ef-duo-light.scss
@@ -9,46 +9,46 @@ $cursor_fg: #fff8f0;
 
 .Ymacs-Theme-ef-duo-light { --ymacs-cursor-bg: #1144ff; --ymacs-cursor-fg: #fff8f0; --ymacs-modeline-in-bg: #e7e0da; --ymacs-modeline-ac-bg: #f8cf8f; }
 .Ymacs-Theme-ef-duo-light { color: #222222; background-color: #fff8f0; }
-.Ymacs-Theme-ef-duo-light .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-ef-duo-light .Ymacs_SplitCont > .bar { background-color: #baafba; }
 .Ymacs-Theme-ef-duo-light .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #f9f2ef; border-bottom: 1px solid #f9f2ef; }
 .Ymacs-Theme-ef-duo-light .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #f9f2ef; border-right: 1px solid #f9f2ef; }
 .Ymacs-Theme-ef-duo-light.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #f9e8c063 }
 .Ymacs-Theme-ef-duo-light .Ymacs-frame-content div.line:before { color: #63728f; }
-.Ymacs-Theme-ef-duo-light.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #000000; font-weight: bold; }
+.Ymacs-Theme-ef-duo-light.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #4250ef; font-weight: bold; }
 .Ymacs-Theme-ef-duo-light .Ymacs-frame-content:before { color: #63728f; background-color: #fff8f0; }
 .Ymacs-Theme-ef-duo-light {
 .Ymacs_Popup {
-  --ymacs-popup-bg: #f9f2ef;
+  --ymacs-popup-bg: #f6ece8;
   --ymacs-popup-fg: #222222;
   --ymacs-popup-scrollbar-thumb: var(--ymacs-popup-fg);
 }
 .Ymacs_Popup .Ymacs_Menu {
-.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #fadacf; }
+.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #fadacf; font-weight: bold; }
 }
 .Ymacs_Overlay.selection div { background-color: #caeafa; }
-.Ymacs_Overlay.isearch div { color: #000000; background-color: #fac200; }
-.Ymacs_Overlay.isearch-lazy div { color: #000000; background-color: #cbcfff; }
-.Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs_Modeline { color: #63728f; background-color: #e7e0da; }
-.Ymacs_Frame-active .Ymacs_Modeline { color: #111133; background-color: #f8cf8f; }
+.Ymacs_Overlay.isearch div { color: #222222; background-color: #fac200; }
+.Ymacs_Overlay.isearch-lazy div { color: #222222; background-color: #cbcfff; }
+.Ymacs_Overlay.match-paren div { color: #222222; background-color: #8adf80; }
+.Ymacs_Modeline { color: #63728f; background-color: #e7e0da; border-top: 1px solid #baafba; border-bottom: 1px solid #baafba; }
+.Ymacs_Frame-active .Ymacs_Modeline { color: #111133; background-color: #f8cf8f; border-top: 1px solid #baafba; border-bottom: 1px solid #baafba; }
 .minibuffer-prompt { color: #4250ef; }
 .mode-line-buffer-id { font-weight: bold; }
 .heading1 { color: #9f4a00; font-weight: bold; }
 .heading2 { color: #4250ef; font-weight: bold; }
 .heading3 { color: #8f5a3a; font-weight: bold; }
 .heading4 { color: #6052cf; font-weight: bold; }
-.markdown-blockquote { color: #406f90; font-style: italic; }
-.markdown-blockquote1 { color: #406f90; font-style: italic; }
-.markdown-blockquote2 { color: #406f90; font-style: italic; }
-.markdown-blockquote3 { color: #406f90; font-style: italic; }
-.markdown-pre { color: #4250ef; }
-.markdown-code { color: #9f4a00; }
-.markdown-code-starter { color: #9f4a00; }
-.markdown-code-stopper { color: #9f4a00; }
+.markdown-blockquote { color: #406f90; }
+.markdown-blockquote1 { color: #406f90; }
+.markdown-blockquote2 { color: #406f90; }
+.markdown-blockquote3 { color: #406f90; }
+.markdown-pre { color: #cf25aa; }
+.markdown-code { color: #1f77bb; }
+.markdown-code-starter { color: #1f77bb; }
+.markdown-code-stopper { color: #1f77bb; }
 .markdown-ref { color: #1f6fbf; }
 .directive { color: #3f70a0; }
 .type { color: #065fff; }
-.builtin { color: #1f77bb; font-weight: bold; }
+.builtin { color: #1f77bb; }
 .function-name { color: #1f6fbf; }
 .variable-name { color: #6052cf; }
 .constant { color: #375cd8; }
@@ -59,30 +59,30 @@ $cursor_fg: #fff8f0;
 .regexp-starter { color: #9f4a00; }
 .regexp-stopper { color: #9f4a00; }
 .regexp-modifier { color: #9f4a00; }
-.keyword { color: #4250ef; font-weight: bold; }
-.comment { color: #a2403f; font-style: italic; }
-.mcomment { color: #a2403f; font-style: italic; }
-.comment-starter { color: #a2403f; font-style: italic; }
-.mcomment-starter { color: #a2403f; font-style: italic; }
-.mcomment-stopper { color: #a2403f; font-style: italic; }
-.number { color: #375cd8; }
-.operator { }
+.keyword { color: #4250ef; }
+.comment { color: #a2403f; }
+.mcomment { color: #a2403f; }
+.comment-starter { color: #a2403f; }
+.mcomment-starter { color: #a2403f; }
+.mcomment-stopper { color: #a2403f; }
+.number { color: #222222; }
+.operator { color: #222222; }
 .error { color: #8a5d00; }
-.isearch-fail { color: #cc3333; background-color: #ffdfe6; font-weight: bold; }
+.isearch-fail { color: #cc3333; background-color: #ffdfe6; }
 .xml-open-tag { color: #1f6fbf; }
 .xml-close-tag { color: #1f6fbf; }
 .xml-attribute { color: #6052cf; }
-.xml-entity-starter { color: #375cd8; }
-.xml-entity-stopper { color: #375cd8; }
-.xml-entity { color: #375cd8; }
-.xml-open-bracket { color: #222222; }
-.xml-close-bracket { color: #222222; }
-.xml-closetag-slash { color: #222222; }
-.xml-cdata { color: #222222; font-style: italic; }
-.xml-cdata-starter { color: #222222; font-style: italic; }
-.xml-cdata-stopper { color: #222222; font-style: italic; }
-.block-starter, .block-stopper { color: #3f70a0; }
-.exp-starter, .exp-stopper { color: #3f70a0; }
-.lisp-keyword { color: #1f77bb; font-weight: bold; }
+.xml-entity-starter { color: #63728f; }
+.xml-entity-stopper { color: #63728f; }
+.xml-entity { color: #63728f; }
+.xml-open-bracket { color: #63728f; }
+.xml-close-bracket { color: #63728f; }
+.xml-closetag-slash { color: #63728f; }
+.xml-cdata { color: #222222; }
+.xml-cdata-starter { color: #cc3333; }
+.xml-cdata-stopper { color: #cc3333; }
+.block-starter, .block-stopper { color: #222222; }
+.exp-starter, .exp-stopper { color: #222222; }
+.lisp-keyword { color: #1f77bb; }
 .hyperlink { color: #1f6fbf; }
 }
