--- a/src/css/themes/_ef-maris-dark.scss
+++ b/src/css/themes/_ef-maris-dark.scss
@@ -9,46 +9,46 @@ $cursor_fg: #131c2b;
 
 .Ymacs-Theme-ef-maris-dark { --ymacs-cursor-bg: #8fdfff; --ymacs-cursor-fg: #131c2b; --ymacs-modeline-in-bg: #2a3644; --ymacs-modeline-ac-bg: #2f527b; }
 .Ymacs-Theme-ef-maris-dark { color: #eaedef; background-color: #131c2b; }
-.Ymacs-Theme-ef-maris-dark .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-ef-maris-dark .Ymacs_SplitCont > .bar { background-color: #595a63; }
 .Ymacs-Theme-ef-maris-dark .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #1a2331; border-bottom: 1px solid #1a2331; }
 .Ymacs-Theme-ef-maris-dark .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #1a2331; border-right: 1px solid #1a2331; }
 .Ymacs-Theme-ef-maris-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #24324263 }
 .Ymacs-Theme-ef-maris-dark .Ymacs-frame-content div.line:before { color: #969faf; }
-.Ymacs-Theme-ef-maris-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #ffffff; font-weight: bold; }
+.Ymacs-Theme-ef-maris-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #12b4ff; font-weight: bold; }
 .Ymacs-Theme-ef-maris-dark .Ymacs-frame-content:before { color: #969faf; background-color: #131c2b; }
 .Ymacs-Theme-ef-maris-dark {
 .Ymacs_Popup {
-  --ymacs-popup-bg: #1a2331;
+  --ymacs-popup-bg: #1d2c39;
   --ymacs-popup-fg: #eaedef;
   --ymacs-popup-scrollbar-thumb: var(--ymacs-popup-fg);
 }
 .Ymacs_Popup .Ymacs_Menu {
-.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #204358; }
+.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #204358; font-weight: bold; }
 }
 .Ymacs_Overlay.selection div { background-color: #183c65; }
-.Ymacs_Overlay.isearch div { color: #ffffff; background-color: #847020; }
-.Ymacs_Overlay.isearch-lazy div { color: #ffffff; background-color: #2f5f9f; }
-.Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs_Modeline { color: #969faf; background-color: #2a3644; }
-.Ymacs_Frame-active .Ymacs_Modeline { color: #ecf0ff; background-color: #2f527b; }
+.Ymacs_Overlay.isearch div { color: #eaedef; background-color: #847020; }
+.Ymacs_Overlay.isearch-lazy div { color: #eaedef; background-color: #2f5f9f; }
+.Ymacs_Overlay.match-paren div { color: #eaedef; background-color: #107840; }
+.Ymacs_Modeline { color: #969faf; background-color: #2a3644; border-top: 1px solid #595a63; border-bottom: 1px solid #595a63; }
+.Ymacs_Frame-active .Ymacs_Modeline { color: #ecf0ff; background-color: #2f527b; border-top: 1px solid #595a63; border-bottom: 1px solid #595a63; }
 .minibuffer-prompt { color: #70a0ff; }
 .mode-line-buffer-id { font-weight: bold; }
 .heading1 { color: #70a0ff; font-weight: bold; }
 .heading2 { color: #7fce5f; font-weight: bold; }
 .heading3 { color: #2fd0db; font-weight: bold; }
 .heading4 { color: #cf90ff; font-weight: bold; }
-.markdown-blockquote { color: #99bfcf; font-style: italic; }
-.markdown-blockquote1 { color: #99bfcf; font-style: italic; }
-.markdown-blockquote2 { color: #99bfcf; font-style: italic; }
-.markdown-blockquote3 { color: #99bfcf; font-style: italic; }
-.markdown-pre { color: #7fce5f; }
-.markdown-code { color: #2fd0db; }
-.markdown-code-starter { color: #2fd0db; }
-.markdown-code-stopper { color: #2fd0db; }
+.markdown-blockquote { color: #99bfcf; }
+.markdown-blockquote1 { color: #99bfcf; }
+.markdown-blockquote2 { color: #99bfcf; }
+.markdown-blockquote3 { color: #99bfcf; }
+.markdown-pre { color: #fa90ea; }
+.markdown-code { color: #65d5a8; }
+.markdown-code-starter { color: #65d5a8; }
+.markdown-code-stopper { color: #65d5a8; }
 .markdown-ref { color: #57b0ff; }
 .directive { color: #cf90ff; }
 .type { color: #41bf4f; }
-.builtin { color: #d4aaf0; font-weight: bold; }
+.builtin { color: #d4aaf0; }
 .function-name { color: #7fce5f; }
 .variable-name { color: #2fd0db; }
 .constant { color: #12b4ff; }
@@ -59,30 +59,30 @@ $cursor_fg: #131c2b;
 .regexp-starter { color: #65d5a8; }
 .regexp-stopper { color: #65d5a8; }
 .regexp-modifier { color: #65d5a8; }
-.keyword { color: #70a0ff; font-weight: bold; }
-.comment { color: #eaa4a4; font-style: italic; }
-.mcomment { color: #eaa4a4; font-style: italic; }
-.comment-starter { color: #eaa4a4; font-style: italic; }
-.mcomment-starter { color: #eaa4a4; font-style: italic; }
-.mcomment-stopper { color: #eaa4a4; font-style: italic; }
-.number { color: #12b4ff; }
-.operator { }
+.keyword { color: #70a0ff; }
+.comment { color: #eaa4a4; }
+.mcomment { color: #eaa4a4; }
+.comment-starter { color: #eaa4a4; }
+.mcomment-starter { color: #eaa4a4; }
+.mcomment-stopper { color: #eaa4a4; }
+.number { color: #eaedef; }
+.operator { color: #eaedef; }
 .error { color: #f0c060; }
-.isearch-fail { color: #ff7a5f; background-color: #551327; font-weight: bold; }
+.isearch-fail { color: #ff7a5f; background-color: #551327; }
 .xml-open-tag { color: #7fce5f; }
 .xml-close-tag { color: #7fce5f; }
 .xml-attribute { color: #2fd0db; }
-.xml-entity-starter { color: #12b4ff; }
-.xml-entity-stopper { color: #12b4ff; }
-.xml-entity { color: #12b4ff; }
-.xml-open-bracket { color: #eaedef; }
-.xml-close-bracket { color: #eaedef; }
-.xml-closetag-slash { color: #eaedef; }
-.xml-cdata { color: #eaedef; font-style: italic; }
-.xml-cdata-starter { color: #eaedef; font-style: italic; }
-.xml-cdata-stopper { color: #eaedef; font-style: italic; }
-.block-starter, .block-stopper { color: #cf90ff; }
-.exp-starter, .exp-stopper { color: #cf90ff; }
-.lisp-keyword { color: #d4aaf0; font-weight: bold; }
+.xml-entity-starter { color: #969faf; }
+.xml-entity-stopper { color: #969faf; }
+.xml-entity { color: #969faf; }
+.xml-open-bracket { color: #969faf; }
+.xml-close-bracket { color: #969faf; }
+.xml-closetag-slash { color: #969faf; }
+.xml-cdata { color: #eaedef; }
+.xml-cdata-starter { color: #ff7a5f; }
+.xml-cdata-stopper { color: #ff7a5f; }
+.block-starter, .block-stopper { color: #eaedef; }
+.exp-starter, .exp-stopper { color: #eaedef; }
+.lisp-keyword { color: #d4aaf0; }
 .hyperlink { color: #57b0ff; }
 }
