--- a/src/css/themes/_ef-owl.scss
+++ b/src/css/themes/_ef-owl.scss
@@ -9,46 +9,46 @@ $cursor_fg: #292c2f;
 
 .Ymacs-Theme-ef-owl { --ymacs-cursor-bg: #afe6ef; --ymacs-cursor-fg: #292c2f; --ymacs-modeline-in-bg: #40474b; --ymacs-modeline-ac-bg: #5b637e; }
 .Ymacs-Theme-ef-owl { color: #d0d0d0; background-color: #292c2f; }
-.Ymacs-Theme-ef-owl .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-ef-owl .Ymacs_SplitCont > .bar { background-color: #4f5f66; }
 .Ymacs-Theme-ef-owl .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #333539; border-bottom: 1px solid #333539; }
 .Ymacs-Theme-ef-owl .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #333539; border-right: 1px solid #333539; }
 .Ymacs-Theme-ef-owl.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #34425563 }
 .Ymacs-Theme-ef-owl .Ymacs-frame-content div.line:before { color: #857f8f; }
-.Ymacs-Theme-ef-owl.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #ffffff; font-weight: bold; }
+.Ymacs-Theme-ef-owl.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #7ac0b9; font-weight: bold; }
 .Ymacs-Theme-ef-owl .Ymacs-frame-content:before { color: #857f8f; background-color: #292c2f; }
 .Ymacs-Theme-ef-owl {
 .Ymacs_Popup {
-  --ymacs-popup-bg: #333539;
+  --ymacs-popup-bg: #373b3d;
   --ymacs-popup-fg: #d0d0d0;
   --ymacs-popup-scrollbar-thumb: var(--ymacs-popup-fg);
 }
 .Ymacs_Popup .Ymacs_Menu {
-.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #354864; }
+.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #354864; font-weight: bold; }
 }
 .Ymacs_Overlay.selection div { background-color: #404f66; }
-.Ymacs_Overlay.isearch div { color: #ffffff; background-color: #8f665f; }
-.Ymacs_Overlay.isearch-lazy div { color: #ffffff; background-color: #4f70aa; }
-.Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs_Modeline { color: #857f8f; background-color: #40474b; }
-.Ymacs_Frame-active .Ymacs_Modeline { color: #dadfe5; background-color: #5b637e; }
+.Ymacs_Overlay.isearch div { color: #d0d0d0; background-color: #8f665f; }
+.Ymacs_Overlay.isearch-lazy div { color: #d0d0d0; background-color: #4f70aa; }
+.Ymacs_Overlay.match-paren div { color: #d0d0d0; background-color: #30682f; }
+.Ymacs_Modeline { color: #857f8f; background-color: #40474b; border-top: 1px solid #4f5f66; border-bottom: 1px solid #4f5f66; }
+.Ymacs_Frame-active .Ymacs_Modeline { color: #dadfe5; background-color: #5b637e; border-top: 1px solid #4f5f66; border-bottom: 1px solid #4f5f66; }
 .minibuffer-prompt { color: #72aff0; }
 .mode-line-buffer-id { font-weight: bold; }
 .heading1 { color: #80a4e0; font-weight: bold; }
 .heading2 { color: #7ac0b9; font-weight: bold; }
 .heading3 { color: #cfa0e8; font-weight: bold; }
 .heading4 { color: #cf9f90; font-weight: bold; }
-.markdown-blockquote { color: #9fb3a7; font-style: italic; }
-.markdown-blockquote1 { color: #9fb3a7; font-style: italic; }
-.markdown-blockquote2 { color: #9fb3a7; font-style: italic; }
-.markdown-blockquote3 { color: #9fb3a7; font-style: italic; }
-.markdown-pre { color: #80a4e0; }
-.markdown-code { color: #98c06f; }
-.markdown-code-starter { color: #98c06f; }
-.markdown-code-stopper { color: #98c06f; }
-.markdown-ref { color: #99bfd0; }
+.markdown-blockquote { color: #9fb3a7; }
+.markdown-blockquote1 { color: #9fb3a7; }
+.markdown-blockquote2 { color: #9fb3a7; }
+.markdown-blockquote3 { color: #9fb3a7; }
+.markdown-pre { color: #d389af; }
+.markdown-code { color: #7ac0b9; }
+.markdown-code-starter { color: #7ac0b9; }
+.markdown-code-stopper { color: #7ac0b9; }
+.markdown-ref { color: #a0a0ef; }
 .directive { color: #98c06f; }
 .type { color: #cfa0e8; }
-.builtin { color: #80a4e0; font-weight: bold; }
+.builtin { color: #80a4e0; }
 .function-name { color: #60bd90; }
 .variable-name { color: #a0a0ef; }
 .constant { color: #cf9f90; }
@@ -59,30 +59,30 @@ $cursor_fg: #292c2f;
 .regexp-starter { color: #7ac0b9; }
 .regexp-stopper { color: #7ac0b9; }
 .regexp-modifier { color: #7ac0b9; }
-.keyword { color: #99bfd0; font-weight: bold; }
-.comment { color: #aab2df; font-style: italic; }
-.mcomment { color: #aab2df; font-style: italic; }
-.comment-starter { color: #aab2df; font-style: italic; }
-.mcomment-starter { color: #aab2df; font-style: italic; }
-.mcomment-stopper { color: #aab2df; font-style: italic; }
-.number { color: #cf9f90; }
-.operator { }
+.keyword { color: #99bfd0; }
+.comment { color: #aab2df; }
+.mcomment { color: #aab2df; }
+.comment-starter { color: #aab2df; }
+.mcomment-starter { color: #aab2df; }
+.mcomment-stopper { color: #aab2df; }
+.number { color: #d0d0d0; }
+.operator { color: #d0d0d0; }
 .error { color: #d1a45f; }
-.isearch-fail { color: #df885f; background-color: #4f231f; font-weight: bold; }
+.isearch-fail { color: #df885f; background-color: #4f231f; }
 .xml-open-tag { color: #60bd90; }
 .xml-close-tag { color: #60bd90; }
 .xml-attribute { color: #a0a0ef; }
-.xml-entity-starter { color: #cf9f90; }
-.xml-entity-stopper { color: #cf9f90; }
-.xml-entity { color: #cf9f90; }
-.xml-open-bracket { color: #d0d0d0; }
-.xml-close-bracket { color: #d0d0d0; }
-.xml-closetag-slash { color: #d0d0d0; }
-.xml-cdata { color: #d0d0d0; font-style: italic; }
-.xml-cdata-starter { color: #d0d0d0; font-style: italic; }
-.xml-cdata-stopper { color: #d0d0d0; font-style: italic; }
-.block-starter, .block-stopper { color: #98c06f; }
-.exp-starter, .exp-stopper { color: #98c06f; }
-.lisp-keyword { color: #80a4e0; font-weight: bold; }
-.hyperlink { color: #99bfd0; }
+.xml-entity-starter { color: #857f8f; }
+.xml-entity-stopper { color: #857f8f; }
+.xml-entity { color: #857f8f; }
+.xml-open-bracket { color: #857f8f; }
+.xml-close-bracket { color: #857f8f; }
+.xml-closetag-slash { color: #857f8f; }
+.xml-cdata { color: #d0d0d0; }
+.xml-cdata-starter { color: #df885f; }
+.xml-cdata-stopper { color: #df885f; }
+.block-starter, .block-stopper { color: #d0d0d0; }
+.exp-starter, .exp-stopper { color: #d0d0d0; }
+.lisp-keyword { color: #80a4e0; }
+.hyperlink { color: #a0a0ef; }
 }
