--- a/src/css/themes/_standard-light.scss
+++ b/src/css/themes/_standard-light.scss
@@ -9,28 +9,28 @@ $cursor_fg: #ffffff;
 
 .Ymacs-Theme-standard-light { --ymacs-cursor-bg: #000000; --ymacs-cursor-fg: #ffffff; --ymacs-modeline-in-bg: #e5e5e5; --ymacs-modeline-ac-bg: #b3b3b3; }
 .Ymacs-Theme-standard-light { color: #000000; background-color: #ffffff; }
-.Ymacs-Theme-standard-light .Ymacs_SplitCont > .bar { background-color: #969896; }
-.Ymacs-Theme-standard-light .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #cccccc; border-bottom: 1px solid #666666; }
-.Ymacs-Theme-standard-light .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #cccccc; border-right: 1px solid #666666; }
+.Ymacs-Theme-standard-light .Ymacs_SplitCont > .bar { background-color: #bababa; }
+.Ymacs-Theme-standard-light .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #f0f0f0; border-bottom: 1px solid #f0f0f0; }
+.Ymacs-Theme-standard-light .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #f0f0f0; border-right: 1px solid #f0f0f0; }
 .Ymacs-Theme-standard-light.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #b4eeb463 }
 .Ymacs-Theme-standard-light .Ymacs-frame-content div.line:before { color: #7f7f7f; }
 .Ymacs-Theme-standard-light.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #000000; font-weight: bold; }
 .Ymacs-Theme-standard-light .Ymacs-frame-content:before { color: #7f7f7f; background-color: #ffffff; }
 .Ymacs-Theme-standard-light {
 .Ymacs_Popup {
-  --ymacs-popup-bg: #f5f5f5;
+  --ymacs-popup-bg: #dcdcdc;
   --ymacs-popup-fg: #000000;
   --ymacs-popup-scrollbar-thumb: var(--ymacs-popup-fg);
 }
 .Ymacs_Popup .Ymacs_Menu {
-.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #bfe8ff; }
+.Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #bfe8ff; font-weight: bold; }
 }
 .Ymacs_Overlay.selection div { background-color: #eedc82; }
 .Ymacs_Overlay.isearch div { color: #000000; background-color: #dfa0f0; }
 .Ymacs_Overlay.isearch-lazy div { color: #000000; background-color: #a4d5f9; }
-.Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs_Modeline { color: #7f7f7f; background-color: #e5e5e5; border: 1px solid #bababa; }
-.Ymacs_Frame-active .Ymacs_Modeline { color: #000000; background-color: #b3b3b3; border: 1px outset #b3b3b3; }
+.Ymacs_Overlay.match-paren div { color: #000000; background-color: #8adf80; }
+.Ymacs_Modeline { color: #7f7f7f; background-color: #e5e5e5; border-top: 1px solid #bababa; border-bottom: 1px solid #bababa; }
+.Ymacs_Frame-active .Ymacs_Modeline { color: #000000; background-color: #b3b3b3; border-top: 1px solid #5a5a5a; border-bottom: 1px solid #5a5a5a; }
 .minibuffer-prompt { color: #0000ff; }
 .mode-line-buffer-id { font-weight: bold; }
 .heading1 { color: #0000ff; font-weight: bold; }
@@ -41,7 +41,7 @@ $cursor_fg: #ffffff;
 .markdown-blockquote1 { color: #8b2252; }
 .markdown-blockquote2 { color: #8b2252; }
 .markdown-blockquote3 { color: #8b2252; }
-.markdown-pre { color: #721045; }
+.markdown-pre { color: #8b2252; }
 .markdown-code { color: #008b8b; }
 .markdown-code-starter { color: #008b8b; }
 .markdown-code-stopper { color: #008b8b; }
@@ -65,24 +65,24 @@ $cursor_fg: #ffffff;
 .comment-starter { color: #b22222; }
 .mcomment-starter { color: #b22222; }
 .mcomment-stopper { color: #b22222; }
-.number { color: #008b8b; }
-.operator { }
+.number { color: #000000; }
+.operator { color: #000000; }
 .error { color: #b6532f; }
 .isearch-fail { color: #000000; background-color: #ff8f88; }
 .xml-open-tag { color: #0000ff; }
 .xml-close-tag { color: #0000ff; }
 .xml-attribute { color: #a0522d; }
-.xml-entity-starter { color: #008b8b; }
-.xml-entity-stopper { color: #008b8b; }
-.xml-entity { color: #008b8b; }
-.xml-open-bracket { color: #000000; }
-.xml-close-bracket { color: #000000; }
-.xml-closetag-slash { color: #000000; }
+.xml-entity-starter { color: #7f7f7f; }
+.xml-entity-stopper { color: #7f7f7f; }
+.xml-entity { color: #7f7f7f; }
+.xml-open-bracket { color: #7f7f7f; }
+.xml-close-bracket { color: #7f7f7f; }
+.xml-closetag-slash { color: #7f7f7f; }
 .xml-cdata { color: #000000; }
-.xml-cdata-starter { color: #000000; }
-.xml-cdata-stopper { color: #000000; }
-.block-starter, .block-stopper { color: #483d8b; }
-.exp-starter, .exp-stopper { color: #483d8b; }
+.xml-cdata-starter { color: #e00033; }
+.xml-cdata-stopper { color: #e00033; }
+.block-starter, .block-stopper { color: #000000; }
+.exp-starter, .exp-stopper { color: #000000; }
 .lisp-keyword { color: #483d8b; }
 .hyperlink { color: #3a5fcd; }
 }
