--- a/src/css/themes/_whiteboard.scss
+++ b/src/css/themes/_whiteboard.scss
@@ -9,7 +9,7 @@ $cursor_fg: #f5f5f5;
 
 .Ymacs-Theme-whiteboard { --ymacs-cursor-bg: #008b00; --ymacs-cursor-fg: #f5f5f5; --ymacs-modeline-in-bg: #666666; --ymacs-modeline-ac-bg: #bfbfbf; }
 .Ymacs-Theme-whiteboard { color: #000000; background-color: #f5f5f5; }
-.Ymacs-Theme-whiteboard .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-whiteboard .Ymacs_SplitCont > .bar { background-color: #999999; }
 .Ymacs-Theme-whiteboard .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #cccccc; border-bottom: 1px solid #666666; }
 .Ymacs-Theme-whiteboard .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #cccccc; border-right: 1px solid #666666; }
 .Ymacs-Theme-whiteboard.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #87ceff63 }
@@ -28,9 +28,9 @@ $cursor_fg: #f5f5f5;
 .Ymacs_Overlay.selection div { background-color: #87ceff; }
 .Ymacs_Overlay.isearch div { color: #ffffff; background-color: #ee6a50; }
 .Ymacs_Overlay.isearch-lazy div { color: #ffffff; background-color: #5f9ea0; }
-.Ymacs_Overlay.match-paren div { color: #000000; background-color: #32cd32; }
-.Ymacs_Modeline { color: #000000; background-color: #666666; border: 1px solid #666666; }
-.Ymacs_Frame-active .Ymacs_Modeline { color: #000000; background-color: #bfbfbf; border: 1px outset #bfbfbf; }
+.Ymacs_Overlay.match-paren div { background-color: #4f94cd; }
+.Ymacs_Modeline { color: #000000; background-color: #666666; border-top: 1px solid #666666; border-bottom: 1px solid #666666; }
+.Ymacs_Frame-active .Ymacs_Modeline { color: #000000; background-color: #bfbfbf; border-top: 1px outset #bfbfbf; border-bottom: 1px outset #bfbfbf; }
 .minibuffer-prompt { color: #104e8b; }
 .mode-line-buffer-id { color: #00008b; font-weight: bold; }
 .heading1 { color: #0000cd; }
